// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pr-comment-handler comments on a pull request 1`] = `
Array [
  Object {
    "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L11

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;

exports[`pr-comment-handler comments on a pull request and mentions the assigned user 1`] = `
Array [
  Object {
    "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L11

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @matchai",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;

exports[`pr-comment-handler comments on a pull request and mentions the assigned users 1`] = `
Array [
  Object {
    "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L11

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco, @matchai and @defunkt",
    "number": 32,
    "owner": "JasonEtco",
    "repo": "tests",
  },
]
`;
